<resources>
    <string name="app_name">TeamWork</string>
    <string name="back">Retour</string>
    <string name="info">Informations</string>
    <string name="description">Description</string>

    <string name="confirm_add">Confirmer l\'ajout</string>
    <string name="confirm_create">Confirmer la création</string>
    <string name="confirm_edit">Confirmer la modification</string>
    <string name="team_description">Description de l\'équipe</string>
    <string name="team_name">Nom de l\'équipe</string>
    <string name="team_index">Liste des équipes</string>
    <string name="team_create">Création d\'une équipe</string>
    <string name="team_show">Détails de l\'équipe</string>
    <string name="team_edit">Modifier l\'équipe</string>
    <string name="team_join">Rejoindre l\'équipe</string>
    <string name="team_quit">Quitter l\'équipe</string>
    <string name="team_delete">Dissocier l\'équipe</string>

    <string name="comment">Commentaire</string>
    <string name="students">Étudiants</string>
    <string name="students_index">Liste des étudiants</string>
    <string name="student_add">Ajouter un étudiant</string>
    <string name="student_code">Code de l\'étudiant</string>

    <string name="project_title">Liste des projets</string>
    <string name="project_notitle">Aucun projet</string>
    <string name="project_participant">Participant(s) : </string>
    <string name="project_group">Groupe : </string>
    <string name="project_select_group"> Choisir le groupe</string>
    <string name="project_description">Description du projet</string>
    <string name="project_creation">Création d\'un projet</string>
    <string name="project_name">Nom du projet</string>
    <string name="project_min">Minimum par équipe</string>
    <string name="project_max">Maximum par équipe</string>
    <string name="project_joinable">Permission de rejoindre une équipe</string>
    <string name="project_creatable">Création d\'équipe possible</string>
    <string name="project_common_classes">Cours commun requis</string>
    <string name="project_delete">Supprimer le projet</string>
    <string name="project_edit">Modifier le projet</string>

    <string name="error_name">Un nom est requis.</string>
    <string name="error_min">Un chiffre est requis pour le minimum</string>
    <string name="error_max">Un chiffre est requis pour le maximum</string>
    <string name="error_maxLow">Le maximum doit être plus grand que le minimum</string>
    <string name="error_minLow">Le minimum ne peut pas être zero.</string>

    <string name="audio">Audio (facultatif)</string>
    <string name="todo">TODO liste</string>
    <string name="task">Tâches</string>
    <string name="add">Ajouter</string>
    <string name="details">Détails</string>

    <string name="profile">Profil</string>
    <string name="profil">Profil</string>
    <string name="password_reset">Réinitialisation du mot de passe</string>
    <string name="disconnect">Déconnecter</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="create">Create</string>
    <string name="login_login">Se connecter</string>
    <string name="login_mail">Courriel</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_update_password">S\'inscrire / Mot de passe oublié</string>
    <string name="register_mail_notice">Un courriel vous sera envoyé sur votre courriel afin de mettre à jour votre mot de passe</string>
    <string name="register_send_mail">Envoyer le courriel d\'inscription</string>
    <string name="todo_add">Ajouter</string>
    <string name="todo_name">NOM</string>
    <string name="todo_description">DESCRIPTION</string>
    <string name="todos">Tâches</string>
    <string name="todo_details">Détails</string>
    <string name="todo_mark_completed">Marquer comme\ncomplété</string>
    <string name="todo_todo">Tâche</string>
    <string name="todo_options">Options</string>
    <string name="todo_error_name">Veuillez entrer un nom de tâche</string>
    <string name="audio_deleted">Audio supprimée</string>
    <string name="permission_denied">Permission à la refusé</string>
    <string name="todo_mark_uncompleted">Marquer comme\nincomplété</string>
    <string name="register_error_mail">Courriel erronés</string>
    <string name="login_error">Identifiants erronés</string>
</resources>