<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/color_tertiary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_tertiary"
        app:title="@string/project_edit"
        android:titleTextColor="@color/text_secondary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_primary" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="text"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_description"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="text|textMultiLine"/>

    <EditText
        android:id="@+id/min_per_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_min"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="number"/>

    <EditText
        android:id="@+id/max_per_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_max"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="number"/>

    <CheckBox
        android:id="@+id/joinable_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/project_joinable"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"/>

    <CheckBox
        android:id="@+id/creatable_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/project_creatable"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"/>

    <CheckBox
        android:id="@+id/common_classes_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/project_common_classes"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"/>


    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/confirm_edit"
        android:textColor="@color/text_secondary"
        android:layout_margin="16dp"/>

</LinearLayout>
