<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/color_tertiary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:src="@drawable/chevron_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_create"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_primary" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="text"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_description"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="text|textMultiLine"/>

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/confirm_create"
        android:textColor="@color/text_secondary"
        android:layout_margin="16dp"/>

</LinearLayout>
