<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/color_tertiary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:src="@drawable/chevron_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_show"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_primary" />

    <Button
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/team_join"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>
    <Button
        android:id="@+id/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/team_quit"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>
    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/team_edit"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/team_delete"
        android:textColor="@color/text_secondary"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="16dp"
        android:layout_columnWeight="1" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        android:columnCount="2"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:layout_columnWeight="1" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"/>

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/text_primary"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="16dp"
        android:layout_columnWeight="1" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_secondary"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/students"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/students"
        android:textColor="@color/text_secondary"
        android:layout_margin="16dp"/>

</LinearLayout>
