<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/color_tertiary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_tertiary"
        app:title="@string/team_edit"
        android:titleTextColor="@color/text_secondary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:popupTheme="@style/menuPopup"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_primary" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="text"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_description"
        android:layout_margin="16sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:inputType="text|textMultiLine"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/confirm_edit"
        android:textColor="@color/text_secondary"
        android:layout_margin="16dp"/>

</LinearLayout>
