<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_tertiary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_login"
            android:textColor="@color/text_primary"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_primary" />

    <EditText
        android:id="@+id/editTextCourriel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:autofillHints="emailAddress"
        android:hint="@string/login_mail"
        android:inputType="text"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:autofillHints="password"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/login_update_password"
        android:textColor="@color/text_secondary"
        app:cornerRadius="5dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="45dp"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/login_login"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:cornerRadius="5dp" />

</LinearLayout>
